--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ body{
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
+  text-decoration: none;
 }
 .site-nav .link:hover, 
 .site-nav .link:focus{
@@ -62,6 +63,7 @@ body{
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
+  text-decoration: none;
 }
 .site-nav .link-contact:hover,
 .site-nav .link-contact:focus{
@@ -195,6 +197,7 @@ body{
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
+  text-decoration: none;
 }
 .contact:hover,
 .contact:focus{
